--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "PRABATH-MD (2.1.2)",
+  "name": "PRABATH-MD (2.1.2)😎👽",
   "description": "PRABATH-MD has been designed to make things easier and fun while using WhatsApp. 👨‍💻❤️",
   "logo": "https://telegra.ph/file/ad25b2227fa2a1a01b707.jpg",
   "keywords": ["nodejs", "bot", "whatsapp bot", "multi device", "prabath-md"],
@@ -7,7 +7,7 @@
 
   "env": {
     "BOT_NUMBER": {
-      "description": "Put the number here.",
+      "description": "263774918784",
       "required": true
     },  
 
